--- a/flower/toJingjing/blossingFlower.html
+++ b/flower/toJingjing/blossingFlower.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./style.css">
 
 </head>
-<body>
+<body style= "height:65%">
 <!-- partial:index.partial.html -->
 <!--  
  
