--- a/flower/toJingjing/blossingFlower.html
+++ b/flower/toJingjing/blossingFlower.html
@@ -15,7 +15,7 @@
   Made with Pure CSS & ♥
 -->
 
-<body class="not-loaded">
+<body class="not-loaded" style= "height:65%">
   <div class="night"></div>
   <div class="flowers">
     <div class="flower flower--1">
