--- a/apology/index.html
+++ b/apology/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - exploding letter</title>
+  <title>My Fault</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
