--- a/Birthday/3D相册.html
+++ b/Birthday/3D相册.html
@@ -51,21 +51,21 @@
 </audio>
 	
 	<div id="wrap">
-		<img src="images/青岛之行1.jpg" alt="" />
-		<img src="images/青岛之行2.jpg" alt="" />
-		<img src="images/青岛之行3.jpg" alt="" />
-		<img src="images/青岛之行4.jpg" alt="" />
-		<img src="images/青岛之行5.jpg" alt="" />
-		<img src="images/青岛之行6.jpg" alt="" />
-		<img src="images/青岛之行7.jpg" alt="" />
-		<img src="images/青岛之行8.jpg" alt="" />
-		<img src="images/青岛之行9.jpg" alt="" />
-		<img src="images/青岛1.jpg" alt="" />
-		<img src="images/青岛4.jpg" alt="" />
-		<img src="images/青岛6.jpg" alt="" />
-		<img src="images/青岛7.jpg" alt="" />
-		<img src="images/青岛8.jpg" alt="" />
-		<img src="images/西湖.jpg" alt="" />
+		<img src="image/青岛之行1.jpg" alt="" />
+		<img src="image/青岛之行2.jpg" alt="" />
+		<img src="image/青岛之行3.jpg" alt="" />
+		<img src="image/青岛之行4.jpg" alt="" />
+		<img src="image/青岛之行5.jpg" alt="" />
+		<img src="image/青岛之行6.jpg" alt="" />
+		<img src="image/青岛之行7.jpg" alt="" />
+		<img src="image/青岛之行8.jpg" alt="" />
+		<img src="image/青岛之行9.jpg" alt="" />
+		<img src="image/青岛1.jpg" alt="" />
+		<img src="image/青岛4.jpg" alt="" />
+		<img src="image/青岛6.jpg" alt="" />
+		<img src="image/青岛7.jpg" alt="" />
+		<img src="image/青岛8.jpg" alt="" />
+		<img src="image/西湖.jpg" alt="" />
 		<p></p>
 	</div>
 	<script type="text/javascript">
