--- a/Birthday/3D相册.html
+++ b/Birthday/3D相册.html
@@ -8,7 +8,7 @@
 	<style type="text/css">
 		*{margin:0;padding:0;}
 		body{
-			background:#222;
+			background-image:url(image/青岛小脚丫.jpg);
 			perspective:800px;/*景深*/
 		}
 		#wrap{
