--- a/out.html
+++ b/out.html
@@ -95,7 +95,7 @@
       position: absolute;
       top: 96px;
       left: 126px;
-      font-weight:border;
+      font-weight:bolder;
       font-size: 15px;
       color: #3a2c9d;
     }
